--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,13 @@ dependencies {
 //    kapt "androidx.room:room-compiler:2.4.0"
 
     def lifecycle_version = "2.5.1"
-
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     implementation 'androidx.compose.runtime:runtime-livedata:1.3.2'
+
+    implementation 'androidx.biometric:biometric:1.2.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
