--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,10 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    //Map
+    implementation 'com.google.maps.android:maps-compose:2.8.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
 
     implementation 'androidx.compose.runtime:runtime-livedata:1.3.2'
 
